# ai-foundry-evals

./: .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
data/: agent-test-queries.jsonl  github-action-data.json  model-test-queries.jsonl  rag-agent-test-queries.jsonl  rag-test-queries.jsonl  safety-test-queries.jsonl  techvibe-handbook.md
personality-eval/: data-sample.jsonl
scripts/: 01_create_custom_evaluator.py  02_create_agents.py  03_eval_agents.py  04_eval_models.py  05_continuous_eval.py  06_red_teaming.py  07_eval_rag.py  08_eval_agent_process.py  09_eval_safety_suite.py  10_eval_rag_agent.py  11_demo_continuous_eval.py  helpers.py
